--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.data.elasticsearch.cluster-name=elasticsearch
+spring.data.elasticsearch.cluster-name=my-wyb-es
 spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
 ##端口号
-server.port=8000
+server.port=8800
 #uploadFileSize end
 gayzw.disk.savepath=d:/abc
 #http访问的前缀
