--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-
+		<swagger.ui>2.9.2</swagger.ui>
 		<elasticsearch.version>6.8.3</elasticsearch.version>
 		<spring.data.elasticsearch.version>3.2.0.RELEASE</spring.data.elasticsearch.version>
 	</properties>
@@ -47,14 +47,6 @@
 	</dependency>
 
 
-	<!-- <dependency> -->
-	<!-- <groupId>org.springframework.boot</groupId> -->
-	<!-- <artifactId>spring-boot-starter-log4j</artifactId> -->
-	<!-- <version>1.3.2.RELEASE</version> -->
-	<!-- <type>pom</type> -->
-	<!-- </dependency> -->
-
-	<!-- https://blog.csdn.net/u014749119/article/details/80275550 -->
 	<dependency>
 		<groupId>org.projectlombok</groupId>
 		<artifactId>lombok</artifactId>
@@ -145,6 +137,23 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-test</artifactId>
 <!-- 		<scope>test</scope> -->
+	</dependency>
+
+	<dependency>
+		<groupId>com.google.guava</groupId>
+		<artifactId>guava</artifactId>
+		<version>27.0-jre</version>
+	</dependency>
+
+	<dependency>
+		<groupId>io.springfox</groupId>
+		<artifactId>springfox-swagger2</artifactId>
+		<version>${swagger.ui}</version>
+	</dependency>
+	<dependency>
+		<groupId>io.springfox</groupId>
+		<artifactId>springfox-swagger-ui</artifactId>
+		<version>${swagger.ui}</version>
 	</dependency>
 </dependencies>
 
